finetuning datasets + rouge analysis and sanity checks for generateed qs + delete large jsonl files and lfs tracking

--- a/data_cleaning_scripts/script_prep_data_for_finetuning.ipynb
+++ b/data_cleaning_scripts/script_prep_data_for_finetuning.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Process Raw Data: Parse original Oyez transcript jsons and output `finetuning_data_processed.jsonl`. Each line has the following keys: `{\"system_prompt\",\"instruction\", \"output\", \"transcript_id\", \"justice\"}`\n",
+    "1. Process Raw Data: Parse original Oyez transcript jsonls and into processed jsonl. Each line has the following keys: `{\"system_prompt\",\"instruction\", \"output\", \"transcript_id\", \"justice\"}`. **NOTE**: Optionally save to `finetuning_data_processed.jsonl`. Currently commented out this code to save on gitlfs storage.\n",
     "1. Filter Processed Data: \n",
     "    1. Filter out non-question samples, i.e. where the response > 50 chars and has \"?\" in it and does not have \"inaudible\" in it.\n",
     "    1. Filter out samples where the responding justice is not one of the current Supreme Court justices\n",
@@ -54,13 +54,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 1: Process Raw Data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -72,12 +65,27 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "TRANSCRIPTS_DIR = \"../transcripts_up_to_2024/\"      # directory of raw JSONs of oral arguments\n",
-    "OUT_DIR = \"../datasets/finetune\""
+    "OUT_DIR = \"../datasets/finetune\"\n",
+    "\n",
+    "def save_jsonl(df, filename):\n",
+    "    df.to_json(filename, orient=\"records\", lines=True)\n",
+    "\n",
+    "def read_jsonl(filename):\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        data = [json.loads(line) for line in f]\n",
+    "    return data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Process Raw Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +217,12 @@
     "        data_transcripts.extend(get_transcript_data(json_file_name))\n",
     "\n",
     "\n",
-    "output_file = f\"{OUT_DIR}/finetuning_data_processed.jsonl\"\n",
-    "with open(output_file, \"w\") as f:\n",
-    "    for entry in data_transcripts:\n",
-    "        f.write(json.dumps(entry) + \"\\n\")\n",
+    "# output_file = f\"{OUT_DIR}/finetuning_data_processed.jsonl\"\n",
+    "# with open(output_file, \"w\") as f:\n",
+    "#     for entry in data_transcripts:\n",
+    "#         f.write(json.dumps(entry) + \"\\n\")\n",
     "\n",
-    "print(f\"Saved {len(data_transcripts)} fine-tuning examples to {output_file}\")"
+    "# print(f\"Saved {len(data_transcripts)} fine-tuning examples to {output_file}\")"
    ]
   },
   {
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,17 +270,10 @@
     "    text = sample.split(': ', 1)[1]\n",
     "    return len(text) > 50 and \"?\" in text and \"inaudible\" not in text.lower()\n",
     "\n",
-    "def save_jsonl(df, filename):\n",
-    "    df.to_json(filename, orient=\"records\", lines=True)\n",
-    "\n",
-    "def read_jsonl(filename):\n",
-    "    with open(filename, \"r\") as f:\n",
-    "        data = [json.loads(line) for line in f]\n",
-    "    return data\n",
-    "\n",
-    "# Load formatted dataset\n",
-    "input_file = f\"{OUT_DIR}/finetuning_data_processed.jsonl\"\n",
-    "df = pd.read_json(input_file, lines=True)\n",
+    "# # Load formatted dataset\n",
+    "# input_file = f\"{OUT_DIR}/finetuning_data_processed.jsonl\" \n",
+    "# df = pd.read_json(input_file, lines=True) # Load data from saved finetuning_data_processed.jsonl file from previous step\n",
+    "df = pd.DataFrame(data_transcripts) # Load data directly from memory\n",
     "\n",
     "print(f\"# samples BEFORE filtering: {len(df)}\")\n",
     "# Filter data\n",
@@ -281,10 +282,10 @@
     "print(f\"# samples AFTER filtering: {len(df)}\")\n",
     "print(f\"# samples by {df['justice'].value_counts()}\")\n",
     "\n",
-    "# Filter data\n",
-    "output_file = f\"{OUT_DIR}/finetuning_data_filtered.jsonl\"\n",
-    "save_jsonl(df, output_file)\n",
-    "print(f\"Saved filtered dataset to: {output_file}\")"
+    "# Save filtered dataset\n",
+    "# output_file = f\"{OUT_DIR}/finetuning_data_filtered.jsonl\"\n",
+    "# save_jsonl(df, output_file)\n",
+    "# print(f\"Saved filtered dataset to: {output_file}\")"
    ]
   },
   {
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,38 +305,88 @@
      "output_type": "stream",
      "text": [
       "Dataset split complete:\n",
-      "Train: 23744\n",
-      "Validation: 2968\n",
-      "Test: 2968\n"
+      "Train: 23365\n",
+      "Validation: 3402\n",
+      "Test: 2913\n",
+      "\n",
+      "TRANSCRIPT ID counts:\n",
+      "Total: 1294\n",
+      "Train: 1035\n",
+      "Validation: 129\n",
+      "Test: 130\n"
      ]
     }
    ],
    "source": [
     "RANDOM_SEED = 42\n",
     "\n",
-    "input_file = f\"{OUT_DIR}/finetuning_data_filtered.jsonl\"\n",
-    "df = pd.read_json(input_file, lines=True)\n",
+    "# input_file = f\"{OUT_DIR}/finetuning_data_filtered.jsonl\"\n",
+    "# df = pd.read_json(input_file, lines=True) # Load data from saved finetuning_data_filtered.jsonl file from previous step\n",
     "\n",
     "train_ratio = 0.80\n",
     "val_ratio = 0.10\n",
     "test_ratio = 0.10\n",
     "\n",
+    "# 0. get unique transcript_ids\n",
+    "transcript_ids = df['transcript_id'].unique()\n",
+    "\n",
     "# 1. split into train (80%) and eval (20%)\n",
-    "train_data, eval_data = train_test_split(\n",
-    "    df, test_size=(val_ratio + test_ratio), stratify=df[\"justice\"], random_state=RANDOM_SEED\n",
+    "train_ids, eval_ids = train_test_split(\n",
+    "    transcript_ids, \n",
+    "    test_size=(val_ratio + test_ratio), \n",
+    "    random_state=RANDOM_SEED\n",
     ")\n",
     "\n",
     "# 2. split eval into validation (10%) and test (10%)\n",
-    "val_data, test_data = train_test_split(\n",
-    "    eval_data, test_size=(test_ratio / (val_ratio + test_ratio)), stratify=eval_data[\"justice\"], random_state=RANDOM_SEED\n",
+    "val_ids, test_ids = train_test_split(\n",
+    "    eval_ids, \n",
+    "    test_size=(test_ratio / (val_ratio + test_ratio)), \n",
+    "    random_state=RANDOM_SEED\n",
     ")\n",
+    "\n",
+    "train_data = df[df['transcript_id'].isin(train_ids)]\n",
+    "val_data = df[df['transcript_id'].isin(val_ids)]\n",
+    "test_data = df[df['transcript_id'].isin(test_ids)]\n",
     "\n",
     "# 3. save splits\n",
     "save_jsonl(train_data, f\"{OUT_DIR}/train.jsonl\")\n",
     "save_jsonl(val_data, f\"{OUT_DIR}/val.jsonl\")\n",
     "save_jsonl(test_data, f\"{OUT_DIR}/test.jsonl\")\n",
     "\n",
-    "print(f\"Dataset split complete:\\nTrain: {len(train_data)}\\nValidation: {len(val_data)}\\nTest: {len(test_data)}\")"
+    "print(f\"Dataset split complete:\\nTrain: {len(train_data)}\\nValidation: {len(val_data)}\\nTest: {len(test_data)}\")\n",
+    "print(f\"\\nTRANSCRIPT ID counts:\\nTotal: {len(transcript_ids)}\\nTrain: {len(train_ids)}\\nValidation: {len(val_ids)}\\nTest: {len(test_ids)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4: Create small test subsample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_SEED = 42\n",
+    "SAMPLE_SIZE = 100\n",
+    "\n",
+    "input_file = f\"{OUT_DIR}/test.jsonl\"\n",
+    "df = pd.read_json(input_file, lines=True)\n",
+    "\n",
+    "test_sample = df.sample(n=SAMPLE_SIZE, random_state=RANDOM_SEED)\n",
+    "save_jsonl(test_sample, f\"{OUT_DIR}/test_{SAMPLE_SIZE}.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_sample.info()"
    ]
   },
   {
@@ -343,6 +394,81 @@
    "metadata": {},
    "source": [
     "## Debug"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify proportions of justice and years across splits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_proportions(train_data, val_data, test_data, column):\n",
+    "    train_proportions = train_data[column].value_counts(normalize=True).sort_index()\n",
+    "    val_proportions = val_data[column].value_counts(normalize=True).sort_index()\n",
+    "    test_proportions = test_data[column].value_counts(normalize=True).sort_index()\n",
+    "\n",
+    "    proportion_df = pd.DataFrame({\n",
+    "        'Train': train_proportions,\n",
+    "        'Validation': val_proportions,\n",
+    "        'Test': test_proportions\n",
+    "    })\n",
+    "    proportion_df = proportion_df * 100\n",
+    "    print(proportion_df)\n",
+    "    proportion_df.plot(kind='bar', figsize=(8, 4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JUSTICE PROPORTIONS:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check_proportions(train_data, val_data, test_data, column='justice')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "YEAR PROPORTIONS:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def add_year_column(dataframe):\n",
+    "#     dataframe['year'] = dataframe['transcript_id'].apply(lambda x: x.split('.')[0])\n",
+    "#     return dataframe\n",
+    "\n",
+    "# train_data = add_year_column(train_data)\n",
+    "# val_data = add_year_column(val_data)\n",
+    "# test_data = add_year_column(test_data)\n",
+    "\n",
+    "# check_proportions(train_data, val_data, test_data, column='year')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Debug Raw data processing"
    ]
   },
   {
