--- a/llm_generation_scripts/generate_questions_llama_della_inference.ipynb
+++ b/llm_generation_scripts/generate_questions_llama_della_inference.ipynb
@@ -1357,7 +1357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "research",
    "language": "python",
    "name": "python3"
   },
@@ -1371,7 +1371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
