Clean files up in main

--- a/testing_scripts/test_get_manual_figures.ipynb
+++ b/testing_scripts/test_get_manual_figures.ipynb
@@ -14,10 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Moved file location –– need to change file paths to match\n",
     "QID_DATA_DIR = \"datasets/2024_questions/with_qid/\"\n",
     "LLAMA_CSV= \"2024_llm_questions_gpt-4o-2024-08-06_qid_manual_labels.csv\"\n",
     "GPT_CSV = \"2024_llm_questions_Meta-Llama-3.1-70B-Instruct_qid-manual-labels.csv\""
