add back merge conflict notebooks

--- a/data_cleaning_scripts/script_prep_data_for_finetuning_dialogue_style.ipynb
+++ b/data_cleaning_scripts/script_prep_data_for_finetuning_dialogue_style.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ca8c36d2-f655-43c8-8b6f-81152ce38604",
    "metadata": {
     "scrolled": true
@@ -324,16 +324,20 @@
     "    max_seq_length = max_seq_length,\n",
     "    dtype = dtype,\n",
     "    load_in_4bit = load_in_4bit,\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Uncomment to see original chat template\n",
+    "# tokenizer.chat_template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "72159543-48e0-49b3-96bc-5afd993a37b9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Set custom chat template\n",
     "def set_chat_template():\n",
     "    return \"\"\"<|begin_of_text|>{%- for message in messages %}<|start_header_id|>{{ message['role'] }}<|end_header_id|>\\n\\n{{ message['content'] }}<|eot_id|>{%- endfor %}\"\"\"\n",
     "tokenizer.chat_template = set_chat_template()"
@@ -341,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "5dae54e2-a58a-42e3-85a3-8881bc99c299",
    "metadata": {},
    "outputs": [],
@@ -353,8 +357,7 @@
     "    {\"role\": \"justice_samuel_a_alito_jr\", \"content\": \"Something Justice Alito said in transcript.\"},\n",
     "]\n",
     "\n",
-    "templated_chat = tokenizer.apply_chat_template(chat, tokenize=False)\n",
-    "# templated_chat"
+    "tokenizer.apply_chat_template(chat, tokenize=False)"
    ]
   },
   {
