refactor finetuning stuff

--- a/finetune/data_prep_scripts/script_prep_data_for_finetuning.ipynb
+++ b/finetune/data_prep_scripts/script_prep_data_for_finetuning.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "TRANSCRIPTS_DIR = \"../transcripts_up_to_2024/\"      # directory of raw JSONs of oral arguments\n",
-    "OUT_DIR = \"../datasets/finetune\"\n",
+    "TRANSCRIPTS_DIR = \"../../transcripts_up_to_2024/\"      # directory of raw JSONs of oral arguments\n",
+    "OUT_DIR = \"../finetuning_datasets\"\n",
     "\n",
     "def save_jsonl(df, filename):\n",
     "    df.to_json(filename, orient=\"records\", lines=True)\n",
@@ -87,15 +87,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved 230841 fine-tuning examples to ../datasets/finetune/finetuning_data_processed.jsonl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_formatted_text_of_turn(turn):\n",
     "    '''\n",
@@ -234,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,8 +245,7 @@
       "Justice Ketanji Brown Jackson    1358\n",
       "Justice Amy Coney Barrett        1207\n",
       "Justice Clarence Thomas          1151\n",
-      "Name: count, dtype: int64\n",
-      "Saved filtered dataset to: ../datasets/finetune/finetuning_data_filtered.jsonl\n"
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -297,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
