--- a/finetune/data_prep_scripts/script_prep_data_for_finetuning_dialogue_style.ipynb
+++ b/finetune/data_prep_scripts/script_prep_data_for_finetuning_dialogue_style.ipynb
@@ -932,9 +932,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama_finetuning_env [~/.conda/envs/llama_finetuning_env/]",
+   "display_name": "research",
    "language": "python",
-   "name": "conda_llama_finetuning_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -946,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
