--- a/finetune/data_prep_scripts/script_prep_data_for_finetuning_dialogue_style.ipynb
+++ b/finetune/data_prep_scripts/script_prep_data_for_finetuning_dialogue_style.ipynb
@@ -5,23 +5,24 @@
    "id": "d71670f7-c11a-4be5-a795-4f53f4289ff4",
    "metadata": {},
    "source": [
-    "# Prep Data for Finetuning"
+    "# Prep Data for Finetuning: Dialogue Style"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e8563250-503e-4b80-aeea-15dc9c17c071",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "TRANSCRIPTS_DIR = \"../../transcripts_up_to_2024/\"      # directory of raw JSONs of oral arguments\n",
     "CASEBRIEF_DIR = \"../../case_briefs_up_to_2025/\"      # directory of raw JSONs of case briefs\n",
-    "OUT_DIR = \"../finetuning_datasets\"\n",
-    "OUT_FILEPATH_TRAIN = os.path.join(OUT_DIR, \"train_dialogue_style.jsonl\")\n",
+    "OUT_DIR = \"../finetuning_datasets/dialogue_style\"\n",
     "\n",
     "def save_jsonl(df, filename):\n",
     "    df.to_json(filename, orient=\"records\", lines=True)\n",
@@ -158,18 +159,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not get facts and question from case brief: Skipping 2008.105_orig\n",
-      "Could not get facts and question from case brief: Skipping 2007.134_orig\n",
-      "Could not get facts and question from case brief: Skipping 2009.138_orig\n",
-      "Could not get facts and question from case brief: Skipping 2009.132_orig\n",
-      "Could not get facts and question from case brief: Skipping 1992.91_522\n",
-      "Could not get facts and question from case brief: Skipping 2003.129_orig\n",
       "Could not get facts and question from case brief: Skipping 2019.18-1587\n",
-      "Could not get facts and question from case brief: Skipping 2010.137_orig\n",
       "Could not get facts and question from case brief: Skipping 2004.128_orig\n",
+      "Could not get facts and question from case brief: Skipping 2016.15-1204\n",
+      "Could not get facts and question from case brief: Skipping 1992.91_522\n",
+      "Could not get facts and question from case brief: Skipping 2007.134_orig\n",
       "Could not get facts and question from case brief: Skipping 2004.105_orig\n",
+      "Could not get facts and question from case brief: Skipping 2003.129_orig\n",
+      "Could not get facts and question from case brief: Skipping 2009.138_orig\n",
+      "Could not get facts and question from case brief: Skipping 2010.137_orig\n",
       "Could not get facts and question from case brief: Skipping 2016.15-1498\n",
-      "Could not get facts and question from case brief: Skipping 2016.15-1204\n"
+      "Could not get facts and question from case brief: Skipping 2008.105_orig\n",
+      "Could not get facts and question from case brief: Skipping 2009.132_orig\n"
      ]
     }
    ],
@@ -276,15 +277,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8cb3371e-3482-49f5-bf9a-2fc7a2e44c14",
+   "metadata": {},
+   "source": [
+    "### Train Test Split"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a2dfb8c3",
+   "execution_count": 9,
+   "id": "e3af45da-13f1-4754-aab3-6755ff38e435",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset split complete:\n",
+      "Train: 1942\n",
+      "Validation: 241\n",
+      "Test: 244\n",
+      "\n",
+      "TRANSCRIPT ID counts:\n",
+      "Total: 2406\n",
+      "Train: 1924\n",
+      "Validation: 241\n",
+      "Test: 241\n"
+     ]
+    }
+   ],
+   "source": [
+    "RANDOM_SEED = 42\n",
+    "\n",
+    "df = pd.DataFrame(data_transcripts)\n",
+    "\n",
+    "train_ratio = 0.80\n",
+    "val_ratio = 0.10\n",
+    "test_ratio = 0.10\n",
+    "\n",
+    "# 0. get unique transcript_ids\n",
+    "transcript_ids = df['transcript_id'].unique()\n",
+    "\n",
+    "# 1. split into train (80%) and eval (20%)\n",
+    "train_ids, eval_ids = train_test_split(\n",
+    "    transcript_ids, \n",
+    "    test_size=(val_ratio + test_ratio), \n",
+    "    random_state=RANDOM_SEED\n",
+    ")\n",
+    "\n",
+    "# 2. split eval into validation (10%) and test (10%)\n",
+    "val_ids, test_ids = train_test_split(\n",
+    "    eval_ids, \n",
+    "    test_size=(test_ratio / (val_ratio + test_ratio)), \n",
+    "    random_state=RANDOM_SEED\n",
+    ")\n",
+    "\n",
+    "train_data = df[df['transcript_id'].isin(train_ids)]\n",
+    "val_data = df[df['transcript_id'].isin(val_ids)]\n",
+    "test_data = df[df['transcript_id'].isin(test_ids)]\n",
+    "\n",
+    "# 3. save splits\n",
+    "save_jsonl(train_data, f\"{OUT_DIR}/train.jsonl\")\n",
+    "save_jsonl(val_data, f\"{OUT_DIR}/val.jsonl\")\n",
+    "save_jsonl(test_data, f\"{OUT_DIR}/test.jsonl\")\n",
+    "\n",
+    "print(f\"Dataset split complete:\\nTrain: {len(train_data)}\\nValidation: {len(val_data)}\\nTest: {len(test_data)}\")\n",
+    "print(f\"\\nTRANSCRIPT ID counts:\\nTotal: {len(transcript_ids)}\\nTrain: {len(train_ids)}\\nValidation: {len(val_ids)}\\nTest: {len(test_ids)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac7fc7a0-3e69-4959-8435-97fca57ec0c4",
+   "metadata": {},
+   "source": [
+    "#### Create small test subsample for quick testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "871eaebe-17d1-42d2-87d2-c6aec545790b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Run the following code to save the data_transcripts to a jsonl file\n",
-    "## Commented out to not have large jsonl file in git history\n",
-    "# save_jsonl(pd.DataFrame(data_transcripts), OUT_FILEPATH_TRAIN)"
+    "RANDOM_SEED = 42\n",
+    "SAMPLE_SIZE = 100\n",
+    "\n",
+    "input_file = f\"{OUT_DIR}/test.jsonl\"\n",
+    "df = pd.read_json(input_file, lines=True)\n",
+    "\n",
+    "test_sample = df.sample(n=SAMPLE_SIZE, random_state=RANDOM_SEED)\n",
+    "save_jsonl(test_sample, f\"{OUT_DIR}/test_{SAMPLE_SIZE}.jsonl\")"
    ]
   },
   {
@@ -891,7 +975,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "research",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -905,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
