--- a/finetune/data_prep_scripts/test_OS_to_dialogue_style_question_generation_logic.ipynb
+++ b/finetune/data_prep_scripts/test_OS_to_dialogue_style_question_generation_logic.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7fc4606",
+   "metadata": {},
+   "source": [
+    "NOTE: This is a v **Rough notebook for testing opening statement based question generation inference logic for dialogue style**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "70ed7c50-662b-4587-aa88-4c02be83c2b2",
