add multiturn jsonl code to notebook and inference script rough

--- a/kylie's_workspace/make_turn_by_turn_context_df.ipynb
+++ b/kylie's_workspace/make_turn_by_turn_context_df.ipynb
@@ -14,16 +14,7 @@
    "execution_count": 1,
    "id": "a509712d-847b-46eb-b5bb-36ca17e81ac6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kz9921/.conda/envs/llama_finetuning_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import argparse\n",
     "import json\n",
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "48c73cd2-d742-4f06-8b35-e84402da57ae",
    "metadata": {},
    "outputs": [],
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "aeb99150-e68b-4e37-a7af-097f25e991ee",
    "metadata": {},
    "outputs": [],
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "1738c4d4-8793-4fa5-bc63-c78c967f8273",
    "metadata": {},
    "outputs": [],
@@ -211,13 +202,64 @@
     "df = pd.DataFrame(context_list)\n",
     "df.to_csv(\"generated_data/context_based_statements_format.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "063d6aeb",
+   "metadata": {},
+   "source": [
+    "Format transcripts into jsonl form and save."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0a9bd7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import copy\n",
+    "\n",
+    "justices = [\n",
+    "    \"justice_amy_coney_barrett\",\n",
+    "    \"justice_brett_m_kavanaugh\",\n",
+    "    \"justice_clarence_thomas\",\n",
+    "    \"justice_elena_kagan\",\n",
+    "    \"justice_john_g_roberts_jr\",\n",
+    "    \"justice_ketanji_brown_jackson\",\n",
+    "    \"justice_neil_gorsuch\",\n",
+    "    \"justice_samuel_a_alito_jr\",\n",
+    "    \"justice_sonia_sotomayor\"\n",
+    "]\n",
+    "\n",
+    "jsonl_path = \"generated_data/context_based_statements_format.jsonl\"\n",
+    "with open(jsonl_path, \"w\") as outfile:\n",
+    "    for transcript in data_transcripts:\n",
+    "        context = []\n",
+    "        for turn in transcript[\"messages\"]:\n",
+    "            if turn[\"role\"] in [\"system\", \"petitioner\", \"respondent\"]:\n",
+    "                context.append(turn)\n",
+    "                continue\n",
+    "\n",
+    "            json_obj = {\n",
+    "                \"transcript_id\": transcript[\"transcript_id\"],\n",
+    "                \"context\": copy.deepcopy(context),\n",
+    "                \"actual_justice\": turn[\"role\"],\n",
+    "                \"text\": turn[\"content\"],\n",
+    "                \"predictions\": [{justice: {}} for justice in justices]\n",
+    "            }\n",
+    "\n",
+    "            outfile.write(json.dumps(json_obj) + \"\\n\")\n",
+    "            context.append(turn)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llama_finetuning_env [~/.conda/envs/llama_finetuning_env/]",
+   "display_name": "research",
    "language": "python",
-   "name": "conda_llama_finetuning_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
