--- a/kylie's_workspace/make_turn_by_turn_context_df.ipynb
+++ b/kylie's_workspace/make_turn_by_turn_context_df.ipynb
@@ -14,7 +14,16 @@
    "execution_count": 1,
    "id": "a509712d-847b-46eb-b5bb-36ca17e81ac6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/nnadeem/.conda/envs/llama_finetuning_env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import argparse\n",
     "import json\n",
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "48c73cd2-d742-4f06-8b35-e84402da57ae",
    "metadata": {},
    "outputs": [],
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "aeb99150-e68b-4e37-a7af-097f25e991ee",
    "metadata": {},
    "outputs": [],
@@ -213,53 +222,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "0a9bd7f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import copy\n",
-    "\n",
-    "justices = [\n",
-    "    \"justice_amy_coney_barrett\",\n",
-    "    \"justice_brett_m_kavanaugh\",\n",
-    "    \"justice_clarence_thomas\",\n",
-    "    \"justice_elena_kagan\",\n",
-    "    \"justice_john_g_roberts_jr\",\n",
-    "    \"justice_ketanji_brown_jackson\",\n",
-    "    \"justice_neil_gorsuch\",\n",
-    "    \"justice_samuel_a_alito_jr\",\n",
-    "    \"justice_sonia_sotomayor\"\n",
-    "]\n",
-    "\n",
-    "jsonl_path = \"generated_data/context_based_statements_format.jsonl\"\n",
+    "jsonl_path = \"../finetune/finetuning_datasets/eval_only/context_based_statements_format.jsonl\"\n",
     "with open(jsonl_path, \"w\") as outfile:\n",
     "    for transcript in data_transcripts:\n",
     "        context = []\n",
-    "        for turn in transcript[\"messages\"]:\n",
+    "        for i, turn in enumerate(transcript[\"messages\"]):\n",
     "            if turn[\"role\"] in [\"system\", \"petitioner\", \"respondent\"]:\n",
     "                context.append(turn)\n",
     "                continue\n",
     "\n",
     "            json_obj = {\n",
+    "                \"turn_id\": f\"{transcript['transcript_id']}_{i}\",\n",
     "                \"transcript_id\": transcript[\"transcript_id\"],\n",
     "                \"context\": copy.deepcopy(context),\n",
     "                \"actual_justice\": turn[\"role\"],\n",
     "                \"text\": turn[\"content\"],\n",
-    "                \"predictions\": [{justice: {}} for justice in justices]\n",
+    "                \"predictions\": {},\n",
     "            }\n",
     "\n",
     "            outfile.write(json.dumps(json_obj) + \"\\n\")\n",
     "            context.append(turn)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1df69267-addc-46f6-8ade-0dc9ca81510a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "research",
+   "display_name": "llama_finetuning_env [~/.conda/envs/llama_finetuning_env/]",
    "language": "python",
-   "name": "python3"
+   "name": "conda_llama_finetuning_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -271,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
